[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/Cocola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/ADELIA.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 3
expand_margin_left = 5.0
expand_margin_top = 5.0

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "TransitionReverse"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "TransitionReverse"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Settings" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1284.0
margin_bottom = 722.0
color = Color( 0, 0.627451, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTitle" type="RichTextLabel" parent="."]
margin_left = 473.0
margin_top = 32.0
margin_right = 807.0
margin_bottom = 100.0
rect_min_size = Vector2( 60, 30 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Settings"
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensitivity" type="RichTextLabel" parent="."]
margin_left = 120.0
margin_top = 132.0
margin_right = 454.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 30 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 18 )
bbcode_enabled = true
bbcode_text = "Sensitivity : 0"
text = "Sensitivity : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Sensitivity"]
margin_left = 9.0
margin_top = 49.0
margin_right = 208.0
margin_bottom = 66.0
custom_styles/slider = SubResource( 3 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="RichTextLabel" parent="."]
margin_left = 121.0
margin_top = 261.0
margin_right = 455.0
margin_bottom = 329.0
rect_min_size = Vector2( 60, 30 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 18 )
bbcode_enabled = true
bbcode_text = "FullScreen"
text = "FullScreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckButton" parent="Fullscreen"]
margin_left = 300.0
margin_top = -2.0
margin_right = 376.0
margin_bottom = 38.0
rect_min_size = Vector2( 29.145, 30 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 5.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 30 )
custom_colors/font_color = Color( 0.890196, 0.890196, 0.890196, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Transition = SubResource( 6 )
anims/TransitionReverse = SubResource( 7 )

[node name="Transition2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/Transition = SubResource( 9 )
anims/TransitionReverse = SubResource( 10 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_right = 1284.0
margin_bottom = 721.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedRunText" type="RichTextLabel" parent="."]
margin_left = 121.0
margin_top = 357.0
margin_right = 455.0
margin_bottom = 425.0
rect_min_size = Vector2( 60, 30 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 18 )
bbcode_enabled = true
bbcode_text = "Speedrun mode"
text = "Speedrun mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedrun" type="CheckButton" parent="SpeedRunText"]
margin_left = 301.0
margin_top = 1.0
margin_right = 377.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Fullscreen/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="toggled" from="Fullscreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="SpeedRunText/Speedrun" to="." method="_on_Speedrun_toggled"]
